Fixed skrollr issues on mobile  - Fixed inability to scroll due to needing to shift scroll behavior onto a div instead of the body per skrollr documentation and mobile optimization issues  - Fixed a long-time issue with chrome and translateZ with skrollr causing elements to be hidden unintentionally

--- a/app/styles/mycss/3-base/_index.scss
+++ b/app/styles/mycss/3-base/_index.scss
@@ -7,6 +7,8 @@ body {
 
 	> div {
 		width: 100%;
+		// perspective fixes chrome/skrollr issue with disappearing elements
+		perspective: 300px;
 	}
 }
 
